--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Atkinson+Hyperlegible:regular,bold,italic&subset=latin,latin-ext');
 
 * {
-    font-family: Atkinson Hyperlegible
+    font-family: Atkinson Hyperlegible;
+    color: white
 }
 
 .App {
   text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
